--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
                             <a href="#" class="header__link">Sign in</a>
                         </li>
                     </ul>
+                    <div class="header__nav-close">
+                        <span class="header__nav-close-line"></span>
+                        <span class="header__nav-close-line"></span>
+                    </div>
                 </nav>
+                <div class="header__burger burger">
+                    <span class="burger__line burger__line_first"></span>
+                    <span class="burger__line burger__line_second"></span>
+                    <span class="burger__line burger__line_third"></span>
+                </div>
+
             </div>
         </div>
     </header>
@@ -100,7 +110,6 @@
                     </figcaption>
                     <a href="#" class="places__card-link"></a>
                 </figure>
-
                 <figure class="places__card places__card_size_lg">
                     <img src="./assets/img/places/place2.jpg" alt="Kyoto" class="places__card-pic places__card-pic_size_lg">
                     <figcaption class="places__card-title">
@@ -108,7 +117,6 @@
                     </figcaption>
                     <a href="#" class="places__card-link"></a>
                 </figure>
-
                 <figure class="places__card places__card_size_small">
                     <img src="./assets/img/places/place3.jpg" alt="Tokyo" class="places__card-pic places__card-pic_size_small">
                     <figcaption class="places__card-title">
@@ -116,7 +124,6 @@
                     </figcaption>
                     <a href="#" class="places__card-link"></a>
                 </figure>
-
                 <figure class="places__card places__card_size_small">
                     <img src="./assets/img/places/place4.jpg" alt="Niigata" class="places__card-pic places__card-pic_size_small">
                     <figcaption class="places__card-title">
@@ -124,7 +131,6 @@
                     </figcaption>
                     <a href="#" class="places__card-link"></a>
                 </figure>
-
                 <figure class="places__card places__card_size_small">
                     <img src="./assets/img/places/place5.jpg" alt="Sapporo" class="places__card-pic places__card-pic_size_small">
                     <figcaption class="places__card-title">
@@ -181,7 +187,6 @@
                     <p class="top__card-desc">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.</p>
                     <a href="#!" class="top__card-more">See more</a>
                 </div>
-
                 <div class="top__card">
                     <div class="top__card-pic">
                         <img src="./assets/img/top/Image2.jpg" alt="NIIGATA" class="top__card-thumb">
@@ -198,7 +203,6 @@
                     <p class="top__card-desc">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.</p>
                     <a href="#!" class="top__card-more">See more</a>
                 </div>
-
                 <div class="top__card">
                     <div class="top__card-pic">
                         <img src="./assets/img/top/Image3.jpg" alt="OSAKA" class="top__card-thumb">
@@ -215,7 +219,6 @@
                     <p class="top__card-desc">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.</p>
                     <a href="#!" class="top__card-more">See more</a>
                 </div>
-
                 <div class="top__card">
                     <div class="top__card-pic">
                         <img src="./assets/img/top/Image4.jpg" alt="SAITAMA" class="top__card-thumb">
@@ -232,7 +235,6 @@
                     <p class="top__card-desc">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.</p>
                     <a href="#!" class="top__card-more">See more</a>
                 </div>
-
                 <div class="top__card">
                     <div class="top__card-pic">
                         <img src="./assets/img/top/Image5.jpg" alt="UENO" class="top__card-thumb">
@@ -249,7 +251,6 @@
                     <p class="top__card-desc">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.</p>
                     <a href="#!" class="top__card-more">See more</a>
                 </div>
-
                 <div class="top__card">
                     <div class="top__card-pic">
                         <img src="./assets/img/top/Image6.jpg" alt="SHIBUYA" class="top__card-thumb">
@@ -302,7 +303,6 @@
                             <a href="#" class="footer__menu-link">Privacy Policy</a>
                         </li>
                     </ul>
-
                     <ul class="footer__menu">
                         <li class="footer__menu-item">
                             <h3 class="footer__menu-title">Locations</h3>
@@ -320,7 +320,6 @@
                             <a href="#" class="footer__menu-link">Hokkaido</a>
                         </li>
                     </ul>
-
                     <ul class="footer__menu">
                         <li class="footer__menu-item">
                             <h3 class="footer__menu-title">Social Media</h3>
@@ -339,7 +338,6 @@
                         </li>
                     </ul>
                 </div>
-
             </div>
         </div>
     </footer>
