--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
                     <span class="burger__line burger__line_second"></span>
                     <span class="burger__line burger__line_third"></span>
                 </div>
-
             </div>
         </div>
     </header>
@@ -62,7 +61,6 @@
                 </form>
             </div>
         </section>       
-    </main>
     <!-- Benefits -->
     <section class="benefits">
         <div class="benefits__wrap">
@@ -95,6 +93,7 @@
             </div>
         </div>
     </section>
+    </main>
     <!--Places-->
     <section class="places">
         <div class="wrapper-full">
@@ -160,7 +159,7 @@
                     <p class="tour__desc">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door, </p>
                     <a href="#" class="tour__more">VIEW PREFECTURE</a>
                 </div>
-                <div class="tour__pic">
+                <div class="tour__pic tour__pic_mob-first ">
                     <img class="tour__thumb" src="./assets/img/tours/image2.jpg" alt="Kyoto’s Arashiyama">
                 </div>
             </div>
