--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
                 <nav class="header__nav">
                     <ul class="header__list">
                         <li class="header__item">
-                            <a href="#" class="header__link">Articles</a>
+                            <a href="#articles" class="header__link js-scroll">Articles</a>
                         </li>
                         <li class="header__item">
-                            <a href="#" class="header__link">Locations</a>
+                            <a href="#locations" class="header__link js-scroll">Locations</a>
                         </li>
                         <li class="header__item">
-                            <a href="#" class="header__link">Videos</a>
+                            <a href="#videos" class="header__link js-scroll">Videos</a>
                         </li>
                         <li class="header__item">
-                            <a href="#" class="header__link">Sign in</a>
+                            <a href="#sign-in" class="header__link js-scroll">Sign in</a>
                         </li>
                     </ul>
                     <div class="header__nav-close">
@@ -46,7 +46,7 @@
     </header>
     <!-- Main -->
     <main class="main">
-        <section class="intro">
+        <section class="intro" id="sign-in">
             <div class="wrapper">
                 <h1 class="intro__title">Discover Amazing places in Japan</h1>
                 <p class="intro__subtitle">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door, </p>
@@ -141,7 +141,7 @@
         </div>
     </section>
     <!-- Touors -->
-    <div class="tours">
+    <div class="tours" id="articles">
         <div class="wrapper-full">
             <div class="tours__tour tour">
                 <div class="tour__pic">
@@ -166,7 +166,7 @@
         </div>
     </div>
     <!-- Top -->
-    <section class="top">
+    <section class="top" id="locations">
         <div class="wrapper-full">
             <h2 class="top__title section-title">Today top places to visit</h2>
             <div class="top__cards">
@@ -270,7 +270,7 @@
         </div>
     </section>
     <!-- Videos -->
-    <div class="videos">
+    <div class="videos" id="videos">
         <div class="videos__wrapper">
             <div class="video__item">
                 <iframe class="video__element" src="https://www.youtube.com/embed/nGJMwixogyk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
