--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/reset/reset.css">
-    <link rel="stylesheet" href="./assets/style/style.css">
+    <link rel="stylesheet" href="./assets/style/style.min.css">
     <title>Discover Amazing places in Japan</title>
 </head>
 <body>
@@ -103,35 +103,35 @@
             </div>
             <div class="places__cards">
                 <figure class="places__card places__card_size_lg">
-                    <img src="./assets/img/places/place1.jpg" alt="Mount Fuji" class="places__card-pic places__card-pic_size_lg">
+                    <img src="./assets/img/places/place1-min.jpg" alt="Mount Fuji" class="places__card-pic places__card-pic_size_lg">
                     <figcaption class="places__card-title">
                         Mount Fuji
                     </figcaption>
                     <a href="#" class="places__card-link"></a>
                 </figure>
                 <figure class="places__card places__card_size_lg">
-                    <img src="./assets/img/places/place2.jpg" alt="Kyoto" class="places__card-pic places__card-pic_size_lg">
+                    <img src="./assets/img/places/place2-min.jpg" alt="Kyoto" class="places__card-pic places__card-pic_size_lg">
                     <figcaption class="places__card-title">
                         Kyoto
                     </figcaption>
                     <a href="#" class="places__card-link"></a>
                 </figure>
                 <figure class="places__card places__card_size_small">
-                    <img src="./assets/img/places/place3.jpg" alt="Tokyo" class="places__card-pic places__card-pic_size_small">
+                    <img src="./assets/img/places/place3-min.jpg" alt="Tokyo" class="places__card-pic places__card-pic_size_small">
                     <figcaption class="places__card-title">
                         Tokyo
                     </figcaption>
                     <a href="#" class="places__card-link"></a>
                 </figure>
                 <figure class="places__card places__card_size_small">
-                    <img src="./assets/img/places/place4.jpg" alt="Niigata" class="places__card-pic places__card-pic_size_small">
+                    <img src="./assets/img/places/place4-min.jpg" alt="Niigata" class="places__card-pic places__card-pic_size_small">
                     <figcaption class="places__card-title">
                         Niigata
                     </figcaption>
                     <a href="#" class="places__card-link"></a>
                 </figure>
                 <figure class="places__card places__card_size_small">
-                    <img src="./assets/img/places/place5.jpg" alt="Sapporo" class="places__card-pic places__card-pic_size_small">
+                    <img src="./assets/img/places/place5-min.jpg" alt="Sapporo" class="places__card-pic places__card-pic_size_small">
                     <figcaption class="places__card-title">
                         Sapporo
                     </figcaption>
@@ -145,7 +145,7 @@
         <div class="wrapper-full">
             <div class="tours__tour tour">
                 <div class="tour__pic">
-                    <img class="tour__thumb" src="./assets/img/tours/Image.jpg" alt="Prefecture in Focus: Tottori">
+                    <img class="tour__thumb" src="./assets/img/tours/Image-min.jpg" alt="Prefecture in Focus: Tottori">
                 </div>
                 <div class="tour__info">
                     <h3 class="tour__title">Prefecture in Focus: Tottori</h3>
@@ -160,7 +160,7 @@
                     <a href="#" class="tour__more">VIEW PREFECTURE</a>
                 </div>
                 <div class="tour__pic tour__pic_mob-first ">
-                    <img class="tour__thumb" src="./assets/img/tours/image2.jpg" alt="Kyoto’s Arashiyama">
+                    <img class="tour__thumb" src="./assets/img/tours/image2-min.jpg" alt="Kyoto’s Arashiyama">
                 </div>
             </div>
         </div>
@@ -172,7 +172,7 @@
             <div class="top__cards">
                 <div class="top__card">
                     <div class="top__card-pic">
-                        <img src="./assets/img/top/Image1.jpg" alt="NAGOYA" class="top__card-thumb">
+                        <img src="./assets/img/top/Image1-min.jpg" alt="NAGOYA" class="top__card-thumb">
                         <div class="top__card-stats">
                             <h3 class="top__card-title">NAGOYA</h3>
                             <div class="top__card-likes">
@@ -188,7 +188,7 @@
                 </div>
                 <div class="top__card">
                     <div class="top__card-pic">
-                        <img src="./assets/img/top/Image2.jpg" alt="NIIGATA" class="top__card-thumb">
+                        <img src="./assets/img/top/Image2-min.jpg" alt="NIIGATA" class="top__card-thumb">
                         <div class="top__card-stats">
                             <h3 class="top__card-title">NIIGATA</h3>
                             <div class="top__card-likes">
@@ -204,7 +204,7 @@
                 </div>
                 <div class="top__card">
                     <div class="top__card-pic">
-                        <img src="./assets/img/top/Image3.jpg" alt="OSAKA" class="top__card-thumb">
+                        <img src="./assets/img/top/Image3-min.jpg" alt="OSAKA" class="top__card-thumb">
                         <div class="top__card-stats">
                             <h3 class="top__card-title">OSAKA</h3>
                             <div class="top__card-likes">
@@ -220,7 +220,7 @@
                 </div>
                 <div class="top__card">
                     <div class="top__card-pic">
-                        <img src="./assets/img/top/Image4.jpg" alt="SAITAMA" class="top__card-thumb">
+                        <img src="./assets/img/top/Image4-min.jpg" alt="SAITAMA" class="top__card-thumb">
                         <div class="top__card-stats">
                             <h3 class="top__card-title">SAITAMA</h3>
                             <div class="top__card-likes">
@@ -236,7 +236,7 @@
                 </div>
                 <div class="top__card">
                     <div class="top__card-pic">
-                        <img src="./assets/img/top/Image5.jpg" alt="UENO" class="top__card-thumb">
+                        <img src="./assets/img/top/Image5-min.jpg" alt="UENO" class="top__card-thumb">
                         <div class="top__card-stats">
                             <h3 class="top__card-title">UENO</h3>
                             <div class="top__card-likes">
@@ -340,6 +340,6 @@
             </div>
         </div>
     </footer>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/script.min.js"></script>
 </body>
 </html>
