--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="./assets/reset/reset.css">
     <link rel="stylesheet" href="./assets/style/style.min.css">
     <title>Discover Amazing places in Japan</title>
+    <meta name="description" content="">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./assets/img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="./assets/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="./assets/img/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#ffc40d">
+    <meta name="msapplication-config" content="./assets/img/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <!-- Header -->
@@ -46,7 +56,7 @@
     </header>
     <!-- Main -->
     <main class="main">
-        <section class="intro" id="sign-in">
+        <div class="intro" id="sign-in">
             <div class="wrapper">
                 <h1 class="intro__title">Discover Amazing places in Japan</h1>
                 <p class="intro__subtitle">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door, </p>
@@ -60,7 +70,7 @@
                     </fieldset>
                 </form>
             </div>
-        </section>       
+        </div>       
     <!-- Benefits -->
     <section class="benefits">
         <div class="benefits__wrap">
@@ -102,41 +112,41 @@
                 <a href="" class="places__view-all">VIEW ALL</a>
             </div>
             <div class="places__cards">
-                <figure class="places__card places__card_size_lg">
+                <div class="places__card places__card_size_lg">
                     <img src="./assets/img/places/place1-min.jpg" alt="Mount Fuji" class="places__card-pic places__card-pic_size_lg">
-                    <figcaption class="places__card-title">
+                    <h3 class="places__card-title">
                         Mount Fuji
-                    </figcaption>
+                    </р>
                     <a href="#" class="places__card-link"></a>
-                </figure>
-                <figure class="places__card places__card_size_lg">
+                </div>
+                <div class="places__card places__card_size_lg">
                     <img src="./assets/img/places/place2-min.jpg" alt="Kyoto" class="places__card-pic places__card-pic_size_lg">
-                    <figcaption class="places__card-title">
+                    <h3 class="places__card-title">
                         Kyoto
-                    </figcaption>
+                    </h3>
                     <a href="#" class="places__card-link"></a>
-                </figure>
-                <figure class="places__card places__card_size_small">
+                </div>
+                <div class="places__card places__card_size_small">
                     <img src="./assets/img/places/place3-min.jpg" alt="Tokyo" class="places__card-pic places__card-pic_size_small">
-                    <figcaption class="places__card-title">
+                    <h3 class="places__card-title">
                         Tokyo
-                    </figcaption>
+                    </h3>
                     <a href="#" class="places__card-link"></a>
-                </figure>
-                <figure class="places__card places__card_size_small">
+                </div>
+                <div class="places__card places__card_size_small">
                     <img src="./assets/img/places/place4-min.jpg" alt="Niigata" class="places__card-pic places__card-pic_size_small">
-                    <figcaption class="places__card-title">
+                    <h3 class="places__card-title">
                         Niigata
-                    </figcaption>
+                    </h3>
                     <a href="#" class="places__card-link"></a>
-                </figure>
-                <figure class="places__card places__card_size_small">
+                </div>
+                <div class="places__card places__card_size_small">
                     <img src="./assets/img/places/place5-min.jpg" alt="Sapporo" class="places__card-pic places__card-pic_size_small">
-                    <figcaption class="places__card-title">
+                    <h3 class="places__card-title">
                         Sapporo
-                    </figcaption>
+                    </h3>
                     <a href="#" class="places__card-link"></a>
-                </figure>
+                </div>
             </div>
         </div>
     </section>
@@ -273,7 +283,7 @@
     <div class="videos" id="videos">
         <div class="videos__wrapper">
             <div class="video__item">
-                <iframe class="video__element" src="https://www.youtube.com/embed/nGJMwixogyk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="video__element" src="https://www.youtube.com/embed/nGJMwixogyk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </div>
