--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/reset/reset.css">
-    <link rel="stylesheet" href="./assets/style/style.min.css">
+    <link rel="stylesheet" href="./assets/style/style.css">
     <title>Discover Amazing places in Japan</title>
     <meta name="description" content="">
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon/apple-touch-icon.png">
@@ -350,6 +350,6 @@
             </div>
         </div>
     </footer>
-    <script src="./assets/js/script.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
